<?xml version="1.0"?>
<package format="2">
  <name>ipa_code_refactoring</name>
  <version>0.0.0</version>
  <description>The ipa_code_refactoring package</description>

  <author>ipa-srd-rd</author>
  <maintainer email="jannik.abbenseth@ipa.fraunhofer.de">Jannik Abbenseth</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
